changed around read function to make it more modular, created write function, tested but not thoroughly the cache manager and reading from the trace file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,8 @@
 cmake_minimum_required(VERSION 3.10)
 project(CacheSim)
-
 set(CMAKE_CXX_STANDARD 17)
 
-
 file(GLOB_RECURSE SRC_FILES CONFIGURE_DEPENDS ${PROJECT_SOURCE_DIR}/src/*.cpp)
-
 include_directories(${PROJECT_SOURCE_DIR}/include)
 
 add_executable(CacheSim ${SRC_FILES})
@@ -15,8 +12,19 @@ add_executable(test_config
     src/ConfigParser.cpp
 )
 
-add_custom_command(TARGET test_config POST_BUILD
+# Copy config.txt to build directory for CacheSim
+add_custom_command(TARGET CacheSim POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_if_different
     ${PROJECT_SOURCE_DIR}/config.txt
-    $<TARGET_FILE_DIR:test_config>
+    $<TARGET_FILE_DIR:CacheSim>
 )
+
+# Copy all .txt trace files from tests folder to build directory for CacheSim
+file(GLOB TRACE_FILES "${PROJECT_SOURCE_DIR}/tests/*.txt")
+foreach(TRACE_FILE ${TRACE_FILES})
+    add_custom_command(TARGET CacheSim POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_if_different
+        ${TRACE_FILE}
+        $<TARGET_FILE_DIR:CacheSim>
+    )
+endforeach()
