I have changed around the functions to try and improve the abstractions and readability. The main architecturally differences are created a cache block thats contains the bit manipulation needed for the block, making a basic container that uses iterators and lookup logic with those iterators, a container manager, which simplifies the api to just read and write while delegating the LRU logic using class specific logic. This is also how we handled the evicition logic, memory controller now only focuses on delegating tasks so everything is a bit easier to read. The current configuration has been tested against trace benchmarks and passed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ ${PROJECT_SOURCE_DIR}/src/LevelCache.cpp ${PROJECT_SOURCE_DIR}/src/StatisticsMan
 add_custom_command(TARGET CacheSim POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_if_different
     ${PROJECT_SOURCE_DIR}/config.txt
-    $<TARGET_FILE_DIR:CacheSim>
+    $<TARGET_FILE_DIR:CacheSim>/config.txt
 )
 
 # Copy tests directory to build directory for CacheSim
